added product pages

--- a/src/nav.css
+++ b/src/nav.css
@@ -71,7 +71,7 @@ nav{
     .nav-links{
         margin-top: 10%;
         position: fixed;
-        background: #f0f2f5;
+        background: #ffffff;
         flex-direction: column;
         height: 50vh;
         width: 100%;
