--- a/src/productPage.css
+++ b/src/productPage.css
@@ -13,6 +13,7 @@
 }
 .row1{
     background-color: #fff;
+        border-radius: .4em;
     display: flex;
     max-width: 100%;
     align-items: center;
@@ -54,7 +55,7 @@
     height: 50%;
 }
 .desc{
-    line-height: 2em;
+    line-height: 1.5em;
     margin-top: 5%;
 }
 .row3{
