--- a/src/shopCart.css
+++ b/src/shopCart.css
@@ -3,7 +3,7 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: red;
+    background-color: rgb(235, 235, 235);
     align-items: center;
 }
 .cart_item{
@@ -20,17 +20,10 @@
 .item_pic{
     max-width: 60%;
 }
-.details{
-    height: 4em;
-    font-size: 1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: stretch;
-}
+
 .row_a{
     height: 50%;
-    max-width: 80%;
+    max-width: 90%;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid rgb(175, 175, 175);
@@ -43,10 +36,10 @@
     font-size: .7em;
     font-weight: normal;
     color: rgb(77, 77, 77);
-    width: 50%;
+    width: 40%;
 }
-.row_b p input{
-    width: 60%;
+.row_b p select{
+    width: 100%;
     border: 1px solid  rgb(175, 175, 175);
 }
 .row_b{
@@ -55,7 +48,31 @@
     justify-content: space-around;
     border-bottom: 1px solid rgb(175, 175, 175);
     height: 50%;
-        max-width: 80%;
+    max-width: 90%;
 
 
+}
+#details{
+    height: 4em;
+    font-size: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+}
+#cancel{
+    width: 20%;
+    color: red;
+}
+.total{
+    margin: 1em 0em;
+    width: 80%;
+    display: flex;
+    height: 10%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    justify-content: space-between;
+}
+.total p{
+    margin: .5em 1em;
 }
