--- a/src/productPage.css
+++ b/src/productPage.css
@@ -10,6 +10,7 @@
     padding: 1.5em;
     justify-content: space-between;
     height: 90vh;
+    padding-top:10vh;
 }
 .row1{
     background-color: #fff;
