--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,16 @@ body {
   margin-bottom: 5%;
 }
 .products{
-  width: 100%;
+  max-width: 100%;
   text-align: center;
+  background-color: rgb(235, 235, 235);
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    padding: 1.5em;
+    padding-top: 3em;
+    justify-content: space-between;
+    height: 90vh;
 }
 
 .products h1{
