--- a/src/nav.css
+++ b/src/nav.css
@@ -36,59 +36,11 @@ nav{
     width: 100%;
     margin-bottom: 10vh;
 }
-    .line{
-        width: 30px;
-        background-color: rgb(0, 0, 0);
-        height: 3px;
-        margin: 5px;
-    }
-    .nav{
-        position: fixed;
-
-    }
-    #logo2{
-        display: block;
-        position: absolute;
-        cursor: pointer;
-        right: 60%;
-        top: 30%;
-        z-index: 2;
-        color: black;
-        text-decoration: none;
-        list-style: none;
-        margin-left: 10%;
-    }
-    #logo2 a{
-        color: black;
-        text-decoration: none;
-        list-style: none;
-    }
-    .hamburger{
-        position: absolute;
-        cursor: pointer;
-        right: 85%;
-        top: 25%;
-        z-index: 2;
-        margin-right: auto;
-    }
-    #logo{
-        display: none;
-
-    }
-    .nav-links{
-        margin-top: 10%;
-        background: #ffffff;
-        flex-direction: column;
-        height: 50vh;
-        width: 100%;
-        clip-path: circle(10px at 90% -10%);
-        -webkit-clip-path:circle(10px at 10% -10%);
-        transition: all .5s ease-out;
-        pointer-events: none;
-    }
-    .nav-links.open{
-        clip-path: circle(1000px at 90% -10%);
-        -webkit-clip-path:circle(1000px at 90% -10%);
-        pointer-events: all;
-    }
+.nav-links a:first-of-type{
+    width: 50%;
+    margin-left: .5em;
+}
+#logo{
+    width: 100%;
+}
 }
