--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
 
 }
 .home{
-  height: 100vh;
+  height: 90vh;
   max-width: 100%;
   background-image: url('./assets/homesmall.jpg');
   background-position: center;
@@ -39,10 +39,13 @@ body {
   text-align: center;
   padding: 1.5em 1em ;
 }
-.home button{
-  background-color: white;
-  border: none;
+.home a {
   width: 40%;
+}
+.home a button{
+  background-color: rgb(255, 255, 255);
+  border: none;
+  width: 100%;
   height: 3em;
   border-radius: 20px;
   margin-bottom: 5%;
@@ -57,7 +60,6 @@ body {
     padding: 1.5em;
     padding-top: 3em;
     justify-content: space-between;
-    height: 90vh;
 }
 
 .products h1{
