--- a/src/productItem.css
+++ b/src/productItem.css
@@ -36,14 +36,16 @@
     max-width: 100% ;
     max-height: 75%;
 }
-.col2 img{
-    max-width: 100% ;
+
+.col2 #to_details{
+        width: 100%;
+
 }
-.to_cart{
+.details{
     border:none;
-    background-color: black;
+    background-color: rgb(18, 172, 51);
     color: white;
-    width: 70%;
+    width: 100%;
     height: 2em;
     margin: .5em 0em 0em 0em;
 }
