--- a/src/productPage.css
+++ b/src/productPage.css
@@ -72,11 +72,13 @@
     background-color: rgb(12, 199, 12);
     color: white;
 }
-.see_more{
+ .row3 #see_more{
+    width: 40%;
+}
+.row3 #see_more .see_more{
     border:none;
     background-color: black;
     color: white;
-    width: 70%;
-    height: 2em;
-    margin: .5em 0em 0em 0em;
+    width: 100%;
+    height: 3em;
 }
