--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
 
 }
 .home{
-  height: 90vh;
+  height: 100vh;
   max-width: 100%;
   background-image: url('./assets/homesmall.jpg');
   background-position: center;
@@ -48,7 +48,7 @@ body {
   width: 100%;
   height: 3em;
   border-radius: 20px;
-  margin-bottom: 5%;
+  margin-bottom: 5vh;
 }
 .products{
   max-width: 100%;
