--- a/src/productPage.css
+++ b/src/productPage.css
@@ -84,7 +84,7 @@
     border-radius: 10px; 
 }
 .row3 button{
-    width: 40%;
+    width: 100%;
     border: none;
     height: 3em;
 }
@@ -96,6 +96,32 @@
     width: 40%;
 }
 .row3 #see_more .see_more{
+    border:none;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 3em;}
+/*shop cart shhhhh*/
+.row4{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+#checkout{
+    width: 30%;
+    background-color: chartreuse;
+    border:none;
+}
+#see_more{
+    border:none;
+    background-color: black;
+    color: white;
+    width: 30%;
+    height: 3em;
+    display: flex;
+    align-items: center;
+}
+.see_more{
     border:none;
     background-color: black;
     color: white;
