--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,68 @@ body {
 .products h1{
   margin: 1em;
 }
+@media screen and (min-width:768px){
+    .home{
+  height: 100vh;
+  max-width: 100%;
+  background-image: url('./assets/homebig.jpg');
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.home p{
+  margin-top: 0px;
+  font-size: 50px;
+  line-height: 1.2em;
+  width: 300px;
+  color: white;
+  text-align: left;
+  padding: 2em 3em 0em 3em ;
+}
+.home a {
+  font-size: 50px;
+  width: 300px;
+  padding: 0em 3em;
+}
+.home a button{
+    font-size: 30px;
+  margin-top: 0px;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  width: 90%;
+  height: 60px;
+  border-radius: 30px;
+  cursor: pointer;
+  margin-bottom: 0px;
+}
+.home a button:hover{
+    font-size: 30px;
+  margin-top: 0px;
+  background-color: rgb(137, 224, 56);
+  transition: ease-in 0.2s;
+}
+.products{
+  height: 100vh;
+  max-width: 100%;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    padding: 1.5em;
+    padding-top: 3em;
+    justify-content: space-around;
+}
+
+.products h1{
+  margin: 1em;
+}
+.list_of_products{
+  display: grid;
+  grid-gap: 50px;
+  
+}
+
+}
