--- a/src/nav.css
+++ b/src/nav.css
@@ -16,7 +16,7 @@ nav{
     align-items: center;
     margin-left: auto;
 }
-.nav-links li a {
+.nav-links li  {
     color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 16px;
@@ -28,7 +28,6 @@ nav{
         display: none;
     }
 
-@media screen and (max-width:768px){
     nav{
     height: 8vh;
     background-color: #ffffff;
@@ -41,6 +40,32 @@ nav{
     margin-left: .5em;
 }
 #logo{
+    width: 100%;
+}
+@media screen and (min-width:768px){
+    nav{
+    height: 8vh;
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    margin-bottom: 10vh;
+}
+.nav-links a:first-of-type{
+    width: 50%;
+    margin-left: .5em;
+}
+.nav-links li  {
+    
+    font-size: 20px;
+}
+#logo{
+    margin-left: 38px;
+    font-weight: bold;
+    font-size: 20px;
+    width: 100%;
+}
+#products{
+    font-size: px;
     width: 100%;
 }
 }
