--- a/src/productItem.css
+++ b/src/productItem.css
@@ -57,3 +57,42 @@
     font-weight: lighter;
     font-size: 1.5em;
 }
+@media screen and (min-width:768px){
+  .product_item{
+      background-color: #fff;
+  max-width: 100%;
+      border:none;
+      
+
+}
+.product_item:first-of-type{
+    border-top: none;
+}
+.col2 p{
+    display: none;
+}
+.list_of_products{
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 20% 20% 20% 20%;
+  grid-template-rows: 40% 40%;
+  height: 70vh;
+  justify-content: center;
+}
+.col1{
+    width: 50%;
+    
+}
+.col2{
+    justify-content: flex-end;
+}
+.details:hover{
+    cursor: pointer;
+}
+.product_item:hover{
+  max-width: 100%;
+      border: 1px solid rgb(190, 190, 190);
+      
+
+}
+}
